# vascc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  diary.md  xmake.lua
.github/workflows/: c-cpp.yml
cc/: as-ld.sh  diary.md  ld.md  ld.sh  parse.py
cc/0/: add.c  cal.c  cast.c  div.c  entry.c  global.c  if.c  log.c  nothing.c  shift.c  switch.c  while.c
cc/1/: extern.c  extern2.c  heap.c  main.c  main2.c  print.c  print_f.c  scanf.c  struct.c
cc/2/: funcfunc.c
cc/3/: extern.cpp
code/: ast.cpp  codegen.cpp  expr.cpp  lexer.cpp  main.cpp  parse.cpp  stmt.cpp  symbol.cpp  table.cpp  vm.cpp
code/base/: String.cpp  Tree.cpp
code/include/: ast.hpp  codegen.hpp  expr.hpp  lexer.hpp  main.hpp  parse.hpp  preprocess.hpp  stmt.hpp  symbol.hpp  vm.hpp
code/include/base/: String.hpp  Tree.hpp  io.hpp  log.hpp  string.hpp  vasdef.hpp  x86.hpp
code/vascc/: ast.cpp  codegen.cpp  expr.cpp  lexer.cpp  parse.cpp  preprocess.cpp  stmt.cpp  symbol.cpp  vm.cpp
code/vascc/base/: io.cpp  string.cpp  x86.cpp
gcc/0/: add.c  if.s  shift.s
gcc/0/while/: while.c  while.s  while1.s  while_O0.s  while_O1.s  while_O3.s
gcc/1/: print.s  print_f.s
llvm/: README.md  cf.sh
llvm/0/: fac.c  main.cpp
testcase/: CMakeLists.txt  README.md  add.txt  donothing.txt  irun.sh  run.sh  test.txt  workflow.sh
testcase/codegen/: binary.cpp  hello.cpp  test.cpp
testcase/invalid/: add.txt  multidef.txt  var.vc
testcase/script/: irun.sh  run.sh
testcase/valid/: add.vc  binary.vc  closet.txt  loveu.c  recursion.txt  test.c  test.txt  vas.c  while.vc
testcase/valid/binary/: calculate.c  calculate.vc  donothing.c  donothing.vc  scope.c  singelop.vc  singleop.c
testcase/valid/ext/: funcfunc.c
testcase/valid/functor/: add.vc  closet.c  closet.vc  multicall.c  multicall.vc  print.c  recursion.c  recursion.vc
testcase/valid/hnu/: 2.c
testcase/valid/loop/: break.c  for.c  while.vc
testcase/warn/: return.c  return.txt
tool/: changeversion.sh  llvm.sh  workflow.sh
tool/flex/: README.md  word_char_count++.l  word_char_count.l
